base/openbao/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openbao
  namespace: openbao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openbao
  template:
    metadata:
      labels:
        app: openbao
    spec:
      containers:
      - name: openbao
        image: docker.io/openbao/openbao:latest
        args:
          - "server"
          - "-dev-root-token-id=testing"
        ports:
          - containerPort: 8200
        volumeMounts:
          - name: data
            mountPath: /openbao
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: openbao
