base/openbao/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openbao
  namespace: openbao
spec:
  type: NodePort
  selector:
    app: openbao
  ports:
  - port: 8200
    targetPort: 8200
    nodePort: 30820
